fix font, remove border on button

--- a/2_Group_9440_Code/index.html
+++ b/2_Group_9440_Code/index.html
@@ -5,6 +5,8 @@
 <head>
   <style type="text/css">
     @import url("ital,wght");
+    /* Import DM Sans font from Google Fonts (example) */
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
   </style>
 
   <title></title>
@@ -39,6 +41,10 @@
     <![endif]-->
 
   <style type="text/css">
+    * {
+      font-family: 'DM Sans', sans-serif;
+    }
+
     a {
       text-decoration: none;
     }
@@ -279,7 +285,7 @@
                                   <td style="padding-bottom: 2.4px">
                                     <p
                                       style="color: #113765; margin: 0; padding: 0; line-height: 21px; mso-line-height-alt: 20px">
-                                      <span style="font-size: 16px; font-weight: 700; text-align: left">Hello
+                                      <span style="font-size: 18px; font-weight: 900; text-align: left">Hello
                                       </span><span
                                         style="font-size: 16px; font-weight: 700; color: magenta; text-align: left">&lt;first
                                         name&gt;</span>
@@ -461,7 +467,7 @@
                     <td align="center" style="padding-top: 16px; padding-bottom: 24px">
                       <table class="bg-113765" cellpadding="0" cellspacing="0" border="0" role="presentation"
                         bgcolor="#113765" width="142.00" height="38.00"
-                        style="border-radius: 100px; border: 2px solid; background-color: #113765; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
+                        style="border-radius: 100px; background-color: #113765; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
                         <tr>
                           <td align="center" valign="middle" height="34.00" style="height: 34px">
                             <table cellpadding="0" cellspacing="0" border="0" role="presentation"
@@ -509,7 +515,7 @@
                                         style="padding-bottom: 0; padding-right: 78.79px; width: 267px; height: 197.45px">
                                         <table class="bg-ccecfc" cellpadding="0" cellspacing="0" border="0"
                                           role="presentation" bgcolor="#ccecfc" width="100.00%" height="38.00"
-                                          style="border-radius: 100px; border: 2px solid; background-color: #ccecfc; width: 100%; height: 38px; border-spacing: 0; border-collapse: separate">
+                                          style="border-radius: 100px; background-color: #ccecfc; width: 100%; height: 38px; border-spacing: 0; border-collapse: separate">
                                           <tr>
                                             <td align="center" valign="middle" height="34.00" style="height: 34px">
                                               <table cellpadding="0" cellspacing="0" border="0" role="presentation"
