--- a/1_Group_9441_Code/index.html
+++ b/1_Group_9441_Code/index.html
@@ -5,6 +5,8 @@
 <head>
   <style type="text/css">
     @import url("ital,wght");
+    /* Import DM Sans font from Google Fonts (example) */
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
   </style>
 
   <title></title>
@@ -39,6 +41,10 @@
     <![endif]-->
 
   <style type="text/css">
+    * {
+      font-family: 'DM Sans', sans-serif;
+    }
+
     td a {
       border: none;
       text-decoration: none;
@@ -203,7 +209,7 @@
   <center lang="en" dir="ltr"
     style="width: 100%; table-layout: fixed; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%">
     <table cellpadding="0" cellspacing="0" border="0" role="presentation"
-      style="margin: 0; border-spacing: 0; border: 2px solid green">
+      style="margin: 0; border-spacing: 0; border: 1px solid green">
       <tr>
         <td style="padding-top: 2.78px">
           <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="border-spacing: 0">
@@ -269,10 +275,9 @@
                         </tr>
                         <tr>
                           <td align="left" style="padding-top: 12.5px; padding-bottom: 5.9px; padding-left: 120.5px">
-                            <p
-                              style="color: #113765; margin: 0; padding: 0; line-height: 21px; mso-line-height-alt: 20px">
-                              <span style="font-size: 16px; font-weight: 700; text-align: left">Hello </span><span
-                                style="font-size: 16px; font-weight: 700; color: magenta; text-align: left">&lt;first
+                            <p style="color: #113765; margin: 0; padding: 0; line-height: 21px;">
+                              <span style="font-size: 18px; font-weight: bold; text-align: left;">Hello</span> <span
+                                style="font-size: 16px; font-weight: 700; color: magenta; text-align: left;">&lt;first
                                 name&gt;</span>
                             </p>
                           </td>
@@ -282,7 +287,7 @@
                             <!--[if mso]> <table role="presentation" border="0" cellspacing="0" cellpadding="0" align="left" width="357" style="width:357px;"> <tr> <td> <![endif]-->
                             <p class="color-113765" width="357"
                               style="font-size: 10px; font-weight: 400; text-align: left; color: #113765; margin: 0; padding: 0; width: 357px">
-                              <span style="font-size: 10px; font-weight: 700; text-align: left">Welcome to
+                              <span style="font-size: 11px; font-weight: 900; text-align: left">Welcome to
                                 ORAcademy</span><span> – your exclusive hub for periodontal education! We're
                                 thrilled to have you join us on this enlightening journey.<br /><br />As a member
                                 of ORAcademy, you can expect regular updates and opportunities for professional
@@ -474,7 +479,7 @@
                                       <td align="center" style="padding-top: 10px; padding-bottom: 8.5px">
                                         <table class="bg-0067b6" cellpadding="0" cellspacing="0" border="0"
                                           role="presentation" bgcolor="#0067b6" width="142.00" height="38.00"
-                                          style="border-radius: 100px; border: 2px solid; background-color: #0067b6; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
+                                          style="border-radius: 100px; background-color: #0067b6; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
                                           <tr>
                                             <td align="center" valign="middle" height="34.00" style="height: 34px">
                                               <table cellpadding="0" cellspacing="0" border="0" role="presentation"
