--- a/2_Group_9440_Code/index.html
+++ b/2_Group_9440_Code/index.html
@@ -234,7 +234,7 @@
     <table cellpadding="0" cellspacing="0" border="0" role="presentation"
       style="margin: 0; border-spacing: 0; border: 2px solid green;">
       <tr>
-        <td width="100.00%" style="padding-top: 14.78px; width: 100%">
+        <td width="100.00%" style="width: 100%">
           <table class="bg-fffffe" cellpadding="0" cellspacing="0" border="0" role="presentation" bgcolor="white"
             width="100.00%" style="background-color: white; width: 100%; border-spacing: 0">
             <tr>
@@ -249,19 +249,11 @@
                         <tr>
                           <td align="left" style="padding-left: 23.75px">
                             <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 365.25pt; height: 235.50pt" src="assets/table_14u000a_2dc70f.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 365.25pt; height:235.50pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
-                            <table background="assets/table_14u000a_2dc70f.png"
+                            <table background="assets/LinkedIn-Post.png"
                               alt="a picture of a tooth with the word orapharma on the bottom" cellpadding="0"
                               cellspacing="0" border="0" role="presentation" align="center" width="487.00"
                               height="314.00"
-                              style="margin: 0; background: url('assets/table_14u000a_f29c6e.png') 50% / 100% no-repeat; width: 487px; height: 314px; border-spacing: 0">
-                              <tr>
-                                <td align="left" valign="middle" height="314.00"
-                                  style="padding-left: 83.25px; height: 314px">
-                                  <img src="assets/img_771788cb_fd36ff.png"
-                                    alt="a logo for orademy with a tooth and leaves" width="344"
-                                    style="max-width: initial; width: 344px; display: block" />
-                                </td>
-                              </tr>
+                              style="margin: 0; background: url('assets/LinkedIn-Post.png') 50% / 100% no-repeat; width: 487px; height: 314px; border-spacing: 0">
                             </table>
                             <!--[if gte mso 9]> </div> </div> </v:textbox> </v:fill> </v:rect> </v:image> <![endif]-->
                           </td>
