--- a/1_Group_9441_Code/index.html
+++ b/1_Group_9441_Code/index.html
@@ -588,10 +588,7 @@
                                             <td style="padding-left: 6px; mso-padding-left-alt: 0; margin-left: 6px">
                                               <p
                                                 style="color: black; margin: 0; padding: 0; line-height: 12px; mso-line-height-rule: exactly">
-                                                <span
-                                                  style="font-size: 9px; font-weight: 400; text-decoration-line: underline; text-decoration: underline">Bridgewater</span><span
-                                                  style="font-size: 9px; font-weight: 400; text-decoration-line: underline; text-decoration: underline">
-                                                </span>
+                                                <span style="font-size: 9px; font-weight: 400; ">Bridgewater</span>
                                               </p>
                                             </td>
                                             <td style="padding-left: 6px; mso-padding-left-alt: 0; margin-left: 6px">
