fix: adjust email 3

--- a/3-autohtml-project/index.html
+++ b/3-autohtml-project/index.html
@@ -10,6 +10,9 @@
 
 
   <style>
+    /* Import DM Sans font from Google Fonts (example) */
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+
     a,
     button,
     input,
@@ -20,6 +23,7 @@
     h4,
     h5,
     * {
+      font-family: 'DM Sans', sans-serif;
       box-sizing: border-box;
       margin: 0;
       padding: 0;
@@ -36,23 +40,8 @@
 
 <body>
   <div class="email-1-1-v-1-inactive-email-3">
-    <div class="linked-in-post">
-      <img class="screenshot-2024-02-13-at-17-52-1" src="screenshot-2024-02-13-at-17-52-10.png" />
-      <div class="rectangle-1267"></div>
-      <img class="group-5995" src="group-59950.svg" />
-      <img class="group-5996" src="group-59960.svg" />
-      <div class="linked-in-post2">
-        <img class="screenshot-2024-02-13-at-17-52-1" src="screenshot-2024-02-13-at-17-52-11.png" />
-        <div class="rectangle-1267"></div>
-        <img class="group-59952" src="group-59951.svg" />
-        <div class="ellipse-69"></div>
-        <div class="ellipse-70"></div>
-        <div class="ellipse-71"></div>
-        <div class="ellipse-72"></div>
-        <div class="ellipse-73"></div>
-        <div class="rectangle-1277"></div>
-        <div class="rectangle-1278"></div>
-      </div>
+    <div class="linked-in-post2"
+      style="background-image: url('LinkedIn-Post.png'); background-size: cover; background-position: center;">
     </div>
     <div class="footer">
       <img class="mask-group" src="mask-group0.svg" />
