--- a/4-autohtml-project/index.html
+++ b/4-autohtml-project/index.html
@@ -10,6 +10,8 @@
 
 
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+
     a,
     button,
     input,
@@ -20,6 +22,7 @@
     h4,
     h5,
     * {
+      font-family: 'DM Sans', sans-serif;
       box-sizing: border-box;
       margin: 0;
       padding: 0;
@@ -43,7 +46,7 @@
         <div class="button-email">
           <div class="frame-126">
             <div class="send-us-your-feedback">Send us your feedback</div>
-            <img class="arrow-3" src="arrow-30.svg" />
+            <img height="10px" width="10px" src="arrow-31.png" />
           </div>
         </div>
       </div>
@@ -185,14 +188,16 @@
         </span>
       </span>
     </div>
+    <img class="arrow-32" height="100px" width="100px" src="arrow-31.png" />
+
     <div class="frame-197">
       <div class="frame-188">
-        <div class="button-email2">
+        <div class="button-email2" style="border: none;">
           <div class="frame-126">
             <div class="reconnect-with-or-academy-now">
               Reconnect with ORAcademy Now!
             </div>
-            <img class="arrow-32" src="arrow-31.svg" />
+            <img height="10px" width="10px" src="arrow-31.png" />
           </div>
         </div>
       </div>
