--- a/5_Group_9451_Code/index.html
+++ b/5_Group_9451_Code/index.html
@@ -5,6 +5,7 @@
 <head>
   <style type="text/css">
     @import url("ital,wght");
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
   </style>
 
   <title></title>
@@ -39,6 +40,10 @@
     <![endif]-->
 
   <style type="text/css">
+    * {
+      font-family: 'DM Sans', sans-serif;
+    }
+
     .dark-mode .bg-d5d5d5 {
       background-color: #d5d5d5 !important;
     }
@@ -224,7 +229,7 @@
     <table cellpadding="0" cellspacing="0" border="0" role="presentation"
       style="margin: 0; border-spacing: 0; border: 2px solid green;">
       <tr>
-        <td valign="top" width="602" style="padding-left: 4px; padding-right: 4px; width: 602px">
+        <td valign="top" width="602" style="width: 602px">
           <table cellpadding="0" cellspacing="0" border="0" role="presentation" width="100.00%"
             style="width: 100%; border-spacing: 0; font-family: 'DM Sans', Tahoma, sans-serif">
             <tr>
@@ -318,7 +323,7 @@
 
                                           <table class="bg-0266ab" cellpadding="0" cellspacing="0" border="0"
                                             role="presentation" bgcolor="#0266ab" width="142.00" height="38.00"
-                                            style="border-radius: 100px; border: 2px solid; background-color: #0266ab; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
+                                            style="border-radius: 100px; background-color: #0266ab; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
                                             <tr>
                                               <td align="center" valign="middle" height="34.00" style="height: 34px">
                                                 <a href="https://www.oracademy.com" target="_blank"
@@ -497,7 +502,7 @@
                                       <td align="center" style="padding-top: 13px">
                                         <table class="bg-0069aa" cellpadding="0" cellspacing="0" border="0"
                                           role="presentation" bgcolor="#0069aa" width="142.00" height="38.00"
-                                          style="border-radius: 100px; border: 2px solid; background-color: #0069aa; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
+                                          style="border-radius: 100px; background-color: #0069aa; width: 142px; height: 38px; border-spacing: 0; border-collapse: separate">
                                           <tr>
                                             <td align="center" valign="middle" height="34.00" style="height: 34px">
                                               <a href="https://www.oracademy.com" target="_blank"
@@ -580,10 +585,7 @@
                                 <td style="padding-left: 6px">
                                   <p
                                     style="color: black; margin: 0; padding: 0; line-height: 12px; mso-line-height-alt: 12px">
-                                    <span
-                                      style="font-size: 9px; font-weight: 400; text-decoration-line: underline; text-decoration: underline">Bridgewater</span><span
-                                      style="font-size: 9px; font-weight: 400; text-decoration-line: underline; text-decoration: underline">
-                                    </span>
+                                    <span style="font-size: 9px; font-weight: 400;">Bridgewater</span>
                                   </p>
                                 </td>
                                 <td style="padding-left: 6px">
