fix: set text decoration none for a href in email 5

--- a/5_Group_9451_Code/index.html
+++ b/5_Group_9451_Code/index.html
@@ -44,6 +44,10 @@
       font-family: 'DM Sans', sans-serif;
     }
 
+    a {
+      text-decoration: none;
+    }
+
     .dark-mode .bg-d5d5d5 {
       background-color: #d5d5d5 !important;
     }
