fix: link redirection

--- a/1_Group_9441_Code/index.html
+++ b/1_Group_9441_Code/index.html
@@ -223,9 +223,12 @@
                         style="width: 100%; border-spacing: 0">
                         <tr>
                           <td align="left" style="padding-bottom: 18.03px; padding-left: 33px">
-                            <img src="assets/img_46_1456_966915.png"
-                              alt="a blurry image of the word pharma on a white background" width="76"
-                              style="border: none; max-width: initial; object-fit: contain; width: 76px; mix-blend-mode: normal; display: block" />
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com"
+                              style="cursor: pointer;">
+                              <img src="assets/img_46_1456_966915.png"
+                                alt="a blurry image of the word pharma on a white background" width="76"
+                                style="border: none; max-width: initial; object-fit: contain; width: 76px; mix-blend-mode: normal; display: block" />
+                            </a>
                           </td>
                         </tr>
                         <tr>
@@ -234,39 +237,53 @@
                               style="margin: 0; border-spacing: 0">
                               <tr>
                                 <td valign="middle">
-                                  <img src="assets/img_5b4bb289_5f6019.png"
-                                    alt="a computer monitor with a website on it that says create your account"
-                                    width="247" style="max-width: initial; width: 247px; display: block" />
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com"
+                                    style="cursor: pointer;">
+                                    <img src="assets/img_5b4bb289_5f6019.png"
+                                      alt="a computer monitor with a website on it that says create your account"
+                                      width="247" style="max-width: initial; width: 247px; display: block" />
+                                  </a>
+
                                 </td>
                                 <td valign="middle" style="padding-left: 4px">
                                   <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 235.50pt; height: 79.50pt" src="assets/table__144siqb_5bf486.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 235.50pt; height:79.50pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
-                                  <table background="assets/table__144siqb_5bf486.png"
-                                    alt="a logo for orademy with a tooth and leaves" cellpadding="0" cellspacing="0"
-                                    border="0" role="presentation" align="center" width="314.00" height="106.00"
-                                    style="background: url('assets/table__144siqb_aeb7b9.png') 50% / 100% no-repeat; width: 314px; height: 106px; border-spacing: 0">
-                                    <tr>
-                                      <td align="left" valign="bottom" height="102.2"
-                                        style="padding-bottom: 3.8px; padding-left: 140.79px; height: 102.2px; mso-padding-left-alt: 0; margin-left: 140.79px">
-                                        <table cellpadding="0" cellspacing="0" border="0" role="presentation"
-                                          style="margin: 0; border-spacing: 0">
-                                          <tr>
-                                            <td valign="top">
-                                              <img src="assets/img_46_1441_f01ce8.png"
-                                                alt="a blurry picture of the word by on a white background."
-                                                width="16.00" height="13.00"
-                                                style="width: 16px; height: 13px; display: block" />
-                                            </td>
-                                            <td valign="top" style="padding-left: 4.64px">
-                                              <img src="assets/img_46_1440_8e7c5c.png"
-                                                alt="the word pharma is written in blue on a white background"
-                                                width="91"
-                                                style="border: none; max-width: initial; object-fit: contain; width: 91px; mix-blend-mode: normal; display: block" />
-                                            </td>
-                                          </tr>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </table>
+                                  <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com"
+                                    style="cursor: pointer;">
+                                    <table background="assets/table__144siqb_5bf486.png"
+                                      alt="a logo for orademy with a tooth and leaves" cellpadding="0" cellspacing="0"
+                                      border="0" role="presentation" align="center" width="314.00" height="106.00"
+                                      style="background: url('assets/table__144siqb_aeb7b9.png') 50% / 100% no-repeat; width: 314px; height: 106px; border-spacing: 0">
+                                      <tr>
+                                        <td align="left" valign="bottom" height="102.2"
+                                          style="padding-bottom: 3.8px; padding-left: 140.79px; height: 102.2px; mso-padding-left-alt: 0; margin-left: 140.79px">
+                                          <table cellpadding="0" cellspacing="0" border="0" role="presentation"
+                                            style="margin: 0; border-spacing: 0">
+                                            <tr>
+                                              <td valign="top">
+                                                <a target="_blank" rel="noopener noreferrer"
+                                                  href="https://www.oracademy.com" style="cursor: pointer;">
+                                                  <img src="assets/img_46_1441_f01ce8.png"
+                                                    alt="a blurry picture of the word by on a white background."
+                                                    width="16.00" height="13.00"
+                                                    style="width: 16px; height: 13px; display: block" />
+                                                </a>
+                                              </td>
+                                              <td valign="top" style="padding-left: 4.64px">
+                                                <a target="_blank" rel="noopener noreferrer"
+                                                  href="https://www.oracademy.com" style="cursor: pointer;">
+                                                  <img src="assets/img_46_1440_8e7c5c.png"
+                                                    alt="the word pharma is written in blue on a white background"
+                                                    width="91"
+                                                    style="border: none; max-width: initial; object-fit: contain; width: 91px; mix-blend-mode: normal; display: block" />
+                                                </a>
+                                              </td>
+                                            </tr>
+                                          </table>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </a>
+
                                   <!--[if gte mso 9]> </div> </div> </v:textbox> </v:fill> </v:rect> </v:image> <![endif]-->
                                 </td>
                               </tr>
@@ -274,13 +291,16 @@
                           </td>
                         </tr>
                         <tr>
-                          <td align="left" style="padding-top: 12.5px; padding-bottom: 5.9px; padding-left: 120.5px">
-                            <p style="color: #113765; margin: 0; padding: 0; line-height: 21px;">
-                              <span style="font-size: 18px; font-weight: bold; text-align: left;">Hello</span> <span
-                                style="font-size: 16px; font-weight: 700; color: magenta; text-align: left;">&lt;first
-                                name&gt;</span>
-                            </p>
-                          </td>
+                          <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com">
+
+                            <td align="left" style="padding-top: 12.5px; padding-bottom: 5.9px; padding-left: 120.5px">
+                              <p style="color: #113765; margin: 0; padding: 0; line-height: 21px;">
+                                <span style="font-size: 18px; font-weight: bold; text-align: left;">Hello</span> <span
+                                  style="font-size: 16px; font-weight: 700; color: magenta; text-align: left;">&lt;first
+                                  name&gt;</span>
+                              </p>
+                            </td>
+                          </a>
                         </tr>
                         <tr>
                           <td align="left" style="padding-top: 5.9px; padding-bottom: 6.9px; padding-left: 121px">
