--- a/5_Group_9451_Code/index.html
+++ b/5_Group_9451_Code/index.html
@@ -246,8 +246,11 @@
                         style="width: 100%; border-spacing: 0">
                         <tr>
                           <td align="left" style="padding-bottom: 32.03px; padding-left: 33px">
-                            <img src="assets/img_46_1093_992cf9.png" alt="Image" width="76"
-                              style="border: none; max-width: initial; object-fit: contain; width: 76px; mix-blend-mode: normal; display: block" />
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com"
+                              style="cursor: pointer;">
+                              <img src="assets/img_46_1093_992cf9.png" alt="Image" width="76"
+                                style="border: none; max-width: initial; object-fit: contain; width: 76px; mix-blend-mode: normal; display: block" />
+                            </a>
                           </td>
                         </tr>
                         <tr>
@@ -380,9 +383,12 @@
                                         <!--[if mso]> <table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center" width="562" style="width:562px;"> <tr> <td style="height:294px;" height="294px"> <![endif]-->
                                         <div bgcolor="#f2faff" width="562" height="294"
                                           style="border-radius: 12px; background-color: #f2faff; width: 562px; height: 294px">
-                                          <img src="assets/img_b38ea07e_29bd67.png"
-                                            alt="an advertisement for orapharma says it 's time for something new"
-                                            width="561" style="max-width: initial; width: 561px; display: block" />
+                                          <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com"
+                                            style="cursor: pointer;">
+                                            <img src="assets/img_b38ea07e_29bd67.png"
+                                              alt="an advertisement for orapharma says it 's time for something new"
+                                              width="561" style="max-width: initial; width: 561px; display: block" />
+                                          </a>
                                         </div>
                                         <!--[if mso]></td></tr></table><![endif]-->
                                       </td>
