--- a/2_Group_9440_Code/index.html
+++ b/2_Group_9440_Code/index.html
@@ -243,22 +243,25 @@
                   style="width: 100%; border-spacing: 0">
                   <tr>
                     <td width="100.00%" style="padding-bottom: 14.75px; width: 100%">
-                      <table cellpadding="0" cellspacing="0" border="0" role="presentation" width="100.00%"
-                        bgcolor="#eff5fe"
-                        style="background-color: #eff5fe; background: linear-gradient(267.94deg, rgba(239, 245, 254, 1) 14.32%, rgba(227, 239, 253, 1) 86.09%); width: 100%; border-spacing: 0">
-                        <tr>
-                          <td align="left" style="padding-left: 23.75px">
-                            <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 365.25pt; height: 235.50pt" src="assets/table_14u000a_2dc70f.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 365.25pt; height:235.50pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
-                            <table background="assets/LinkedIn-Post.png"
-                              alt="a picture of a tooth with the word orapharma on the bottom" cellpadding="0"
-                              cellspacing="0" border="0" role="presentation" align="center" width="487.00"
-                              height="314.00"
-                              style="margin: 0; background: url('assets/LinkedIn-Post.png') 50% / 100% no-repeat; width: 487px; height: 314px; border-spacing: 0">
-                            </table>
-                            <!--[if gte mso 9]> </div> </div> </v:textbox> </v:fill> </v:rect> </v:image> <![endif]-->
-                          </td>
-                        </tr>
-                      </table>
+                      <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com"
+                        style="cursor: pointer;">
+                        <table cellpadding="0" cellspacing="0" border="0" role="presentation" width="100.00%"
+                          bgcolor="#eff5fe"
+                          style="background-color: #eff5fe; background: linear-gradient(267.94deg, rgba(239, 245, 254, 1) 14.32%, rgba(227, 239, 253, 1) 86.09%); width: 100%; border-spacing: 0">
+                          <tr>
+                            <td align="left" style="padding-left: 23.75px">
+                              <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 365.25pt; height: 235.50pt" src="assets/table_14u000a_2dc70f.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 365.25pt; height:235.50pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
+                              <table background="assets/LinkedIn-Post.png"
+                                alt="a picture of a tooth with the word orapharma on the bottom" cellpadding="0"
+                                cellspacing="0" border="0" role="presentation" align="center" width="487.00"
+                                height="314.00"
+                                style="margin: 0; background: url('assets/LinkedIn-Post.png') 50% / 100% no-repeat; width: 487px; height: 314px; border-spacing: 0">
+                              </table>
+                              <!--[if gte mso 9]> </div> </div> </v:textbox> </v:fill> </v:rect> </v:image> <![endif]-->
+                            </td>
+                          </tr>
+                        </table>
+                      </a>
                     </td>
                   </tr>
                   <tr>
