--- a/3-autohtml-project/index.html
+++ b/3-autohtml-project/index.html
@@ -40,31 +40,34 @@
 
 <body>
   <div class="email-1-1-v-1-inactive-email-3">
-    <div class="linked-in-post2"
-      style="background-image: url('LinkedIn-Post.png'); background-size: cover; background-position: center;">
-    </div>
-    <div class="footer">
-      <img class="mask-group" src="mask-group0.svg" />
-      <div class="frame-154"></div>
-    </div>
-    <div class="frame-169">
-      <div class="rectangle-1275"></div>
-      <div class="frame-199">
-        <div class="group-5997">
-          <div class="ellipse-67"></div>
-        </div>
+    <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+      <div class="linked-in-post2"
+        style="background-image: url('LinkedIn-Post.png'); background-size: cover; background-position: center;">
       </div>
-      <div class="frame-197"></div>
-    </div>
-    <div class="frame-1972">
-      <div class="rectangle-1275"></div>
-      <div class="frame-199">
-        <div class="group-5997">
-          <div class="ellipse-67"></div>
-        </div>
+      <div class="footer">
+        <img class="mask-group" src="mask-group0.svg" />
+        <div class="frame-154"></div>
       </div>
-      <div class="frame-197"></div>
-    </div>
+      <div class="frame-169">
+        <div class="rectangle-1275"></div>
+        <div class="frame-199">
+          <div class="group-5997">
+            <div class="ellipse-67"></div>
+          </div>
+        </div>
+        <div class="frame-197"></div>
+      </div>
+      <div class="frame-1972">
+        <div class="rectangle-1275"></div>
+        <div class="frame-199">
+          <div class="group-5997">
+            <div class="ellipse-67"></div>
+          </div>
+        </div>
+        <div class="frame-197"></div>
+      </div>
+    </a>
+
     <div class="frame-196"></div>
     <div class="frame-153">
       <img class="image-50" src="image-500.png" />
@@ -113,7 +116,9 @@
       <div class="div">|</div>
       <div class="legal-notice">LEGAL NOTICE</div>
     </div>
-    <img class="linked-in-post-5-1" src="linked-in-post-5-10.png" />
+    <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+      <img class="linked-in-post-5-1" src="linked-in-post-5-10.png" />
+    </a>
     <div class="frame-188"></div>
     <div class="ellipse-74"></div>
     <img class="surface-laptop-studio" src="surface-laptop-studio0.png" />
@@ -154,14 +159,17 @@
         </span>
       </span>
     </div>
-    <div class="button-email">
-      <div class="frame-126">
-        <div class="can-t-make-it-register-for-a-recording">
-          Reconnect with ORAcademy NOW!
+    <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+      <div class="button-email">
+        <div class="frame-126">
+          <div class="can-t-make-it-register-for-a-recording">
+            Reconnect with ORAcademy NOW!
+          </div>
+          <img class="arrow-3" src="arrow-30.svg" />
         </div>
-        <img class="arrow-3" src="arrow-30.svg" />
       </div>
-    </div>
+    </a>
+
     <div class="frame-141">
       <div class="frame-140">
         <div class="hi-first-name">
