--- a/4-autohtml-project/index.html
+++ b/4-autohtml-project/index.html
@@ -43,12 +43,14 @@
     <img class="image-46" src="image-460.png" />
     <div class="frame-170">
       <div class="frame-188">
-        <div class="button-email">
-          <div class="frame-126">
-            <div class="send-us-your-feedback">Send us your feedback</div>
-            <img height="10px" width="10px" src="arrow-31.png" />
+        <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+          <div class="button-email">
+            <div class="frame-126">
+              <div class="send-us-your-feedback">Send us your feedback</div>
+              <img height="10px" width="10px" src="arrow-31.png" />
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="hello-first-name-we-haven-t-seen-you-in-a-while">
@@ -68,7 +70,9 @@
         </span>
       </span>
     </div>
-    <div class="rectangle-1265"></div>
+    <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+      <div class="rectangle-1265"></div>
+    </a>
     <div class="rectangle-1275"></div>
     <div class="rectangle-1276"></div>
     <div class="pexels-anna-shvets-3845738-2"></div>
@@ -159,7 +163,9 @@
       <div class="legal-notice">LEGAL NOTICE</div>
     </div>
     <img class="group-5995" src="group-59950.svg" />
-    <img class="oracademy-logo-1-2" src="oracademy-logo-1-20.png" />
+    <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+      <img class="oracademy-logo-1-2" src="oracademy-logo-1-20.png" />
+    </a>
     <img class="adobe-stock-334279719-removebg-preview-1-1" src="adobe-stock-334279719-removebg-preview-1-10.png" />
     <div
       class="we-are-continually-updating-and-improving-the-content-available-on-or-academy-but-we-d-love-to-get-your-feedback-and-if-there-s-anything-you-think-we-could-be-doing-better">
@@ -192,14 +198,16 @@
 
     <div class="frame-197">
       <div class="frame-188">
-        <div class="button-email2" style="border: none;">
-          <div class="frame-126">
-            <div class="reconnect-with-or-academy-now">
-              Reconnect with ORAcademy Now!
+        <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+          <div class="button-email2" style="border: none;">
+            <div class="frame-126">
+              <div class="reconnect-with-or-academy-now">
+                Reconnect with ORAcademy Now!
+              </div>
+              <img height="10px" width="10px" src="arrow-31.png" />
             </div>
-            <img height="10px" width="10px" src="arrow-31.png" />
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <img class="adobe-stock-654510334-2" src="adobe-stock-654510334-20.png" />
