fix: footer links on email 3 and 4

--- a/3-autohtml-project/index.html
+++ b/3-autohtml-project/index.html
@@ -108,13 +108,20 @@
       RESIDENTS: DO NOT SELL MY PERSONAL INFORMATION
     </div>
     <div class="frame-155">
-      <div class="unsubscribe-or-update-email-preferences">
-        UNSUBSCRIBE OR UPDATE EMAIL PREFERENCES
-      </div>
+      <a href="https://go.orapharma.com/Orapharma-Preferences-HCP-Existing.html" target="_blank"
+        rel="noopener noreferrer">
+        <div class="unsubscribe-or-update-email-preferences">
+          UNSUBSCRIBE OR UPDATE EMAIL PREFERENCES
+        </div>
+      </a>
       <div class="div">|</div>
-      <div class="privacy-policy">PRIVACY POLICY</div>
+      <a href="https://www.bauschhealth.com/privacy-policy" target="_blank" rel="noopener noreferrer">
+        <div class="privacy-policy">PRIVACY POLICY</div>
+      </a>
       <div class="div">|</div>
-      <div class="legal-notice">LEGAL NOTICE</div>
+      <a href="https://www.bauschhealth.com/terms" target="_blank" rel="noopener noreferrer">
+        <div class="legal-notice">LEGAL NOTICE</div>
+      </a>
     </div>
     <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
       <img class="linked-in-post-5-1" src="linked-in-post-5-10.png" />
