--- a/4-autohtml-project/index.html
+++ b/4-autohtml-project/index.html
@@ -154,13 +154,20 @@
       Products, contact our Customer Care at: 866- 273-7846.
     </div>
     <div class="frame-155">
-      <div class="unsubscribe-or-update-email-preferences">
-        UNSUBSCRIBE OR UPDATE EMAIL PREFERENCES
-      </div>
+      <a href="https://go.orapharma.com/Orapharma-Preferences-HCP-Existing.html" target="_blank"
+        rel="noopener noreferrer">
+        <div class="unsubscribe-or-update-email-preferences">
+          UNSUBSCRIBE OR UPDATE EMAIL PREFERENCES
+        </div>
+      </a>
       <div class="div">|</div>
-      <div class="privacy-policy">PRIVACY POLICY</div>
+      <a href="https://www.bauschhealth.com/privacy-policy" target="_blank" rel="noopener noreferrer">
+        <div class="privacy-policy">PRIVACY POLICY</div>
+      </a>
       <div class="div">|</div>
-      <div class="legal-notice">LEGAL NOTICE</div>
+      <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+        <div class="legal-notice">LEGAL NOTICE</div>
+      </a>
     </div>
     <img class="group-5995" src="group-59950.svg" />
     <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
