fix: remove underline on email 2 bridgewater

--- a/2_Group_9440_Code/index.html
+++ b/2_Group_9440_Code/index.html
@@ -598,13 +598,10 @@
                                       <td style="padding-left: 6px; mso-padding-left-alt: 0; margin-left: 6px">
                                         <p
                                           style="color: black; margin: 0; padding: 0; line-height: 12px; mso-line-height-rule: exactly">
-                                          <span
-                                            style="font-size: 9px; font-weight: 400; text-decoration-line: underline; text-decoration: underline">Bridgewater</span><span
-                                            style="font-size: 9px; font-weight: 400; text-decoration-line: underline; text-decoration: underline">
-                                          </span>
+                                          <span style="font-size: 9px; font-weight: 400;">Bridgewater</span>
                                         </p>
                                       </td>
-                                      <td style="padding-left: 6px; mso-padding-left-alt: 0; margin-left: 6px">
+                                      <td style=" padding-left: 6px; mso-padding-left-alt: 0; margin-left: 6px">
                                         <p class="color-000001"
                                           style="font-size: 9px; font-weight: 400; color: black; margin: 0; padding: 0; line-height: 12px; mso-line-height-rule: exactly">
                                           |</p>
