fix: legal notice link in email 4

--- a/4-autohtml-project/index.html
+++ b/4-autohtml-project/index.html
@@ -165,7 +165,7 @@
         <div class="privacy-policy">PRIVACY POLICY</div>
       </a>
       <div class="div">|</div>
-      <a target="_blank" rel="noopener noreferrer" href="https://www.oracademy.com" style="cursor: pointer;">
+      <a target="_blank" rel="noopener noreferrer" href="https://www.bauschhealth.com/terms" style="cursor: pointer;">
         <div class="legal-notice">LEGAL NOTICE</div>
       </a>
     </div>
