fix: adjust background url because the image is not load on gmail

--- a/1_Group_9441_Code/index.html
+++ b/1_Group_9441_Code/index.html
@@ -548,13 +548,12 @@
                             <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 450.00pt; height: 377.25pt" src="assets/table_1edof4k_88ef52.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 450.00pt; height:377.25pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
                             <table background="assets/table_1edof4k_88ef52.png"
                               alt="a thank you for your dedication to patient care message" cellpadding="0"
-                              cellspacing="0" border="0" role="presentation" align="center" width="100.00%"
-                              height="503.00"
-                              style="background: url('assets/table_1edof4k_d20484.png') 50% / 100% no-repeat; width: 100%; height: 503px; border-spacing: 0; margin-top: -0.5px">
+                              cellspacing="0" border="0" role="presentation" align="center" width="100%" height="503"
+                              style="border-spacing: 0; margin-top: -0.5px; z-index: -5;">
                               <tr>
-                                <td valign="top" height="175.50" style="padding-top: 327.5px; height: 175.5px">
+                                <td valign="top" height="175.50" style="padding-top: 327.5px; height: 175.5px;">
                                   <table cellpadding="0" cellspacing="0" border="0" role="presentation"
-                                    style="border-spacing: 0">
+                                    style="border-spacing: 0; background-color: white; width: 100%;">
                                     <tr>
                                       <td align="left" valign="top" height="31.5"
                                         style="padding-left: 40px; height: 31.5px; mso-padding-left-alt: 0; margin-left: 40px">
@@ -656,7 +655,7 @@
                                       <td align="left"
                                         style="padding-top: 7.5px; padding-bottom: 14.5px; padding-left: 36px">
                                         <table cellpadding="0" cellspacing="0" border="0" role="presentation"
-                                          style="margin: 0; border-spacing: 0">
+                                          style="margin: 0; border-spacing: 0;">
                                           <tr>
                                             <td>
                                               <a href="https://go.orapharma.com/Orapharma-Preferences-HCP-Existing.html"
