fix: adjust background url because the image is not load on gmail. on email 2 n 5

--- a/2_Group_9440_Code/index.html
+++ b/2_Group_9440_Code/index.html
@@ -251,11 +251,16 @@
                           <tr>
                             <td align="left" style="padding-left: 23.75px">
                               <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 365.25pt; height: 235.50pt" src="assets/table_14u000a_2dc70f.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 365.25pt; height:235.50pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
-                              <table background="assets/LinkedIn-Post.png"
+                              <!-- <table background="assets/LinkedIn-Post.png"
                                 alt="a picture of a tooth with the word orapharma on the bottom" cellpadding="0"
                                 cellspacing="0" border="0" role="presentation" align="center" width="487.00"
                                 height="314.00"
                                 style="margin: 0; background: url('assets/LinkedIn-Post.png') 50% / 100% no-repeat; width: 487px; height: 314px; border-spacing: 0">
+                              </table> -->
+                              <table background="assets/LinkedIn-Post.png"
+                                alt="a picture of a tooth with the word orapharma on the bottom" cellpadding="0"
+                                cellspacing="0" border="0" role="presentation" align="center" width="487" height="314"
+                                style="margin: 0; width: 487px; height: 314px; border-spacing: 0">
                               </table>
                               <!--[if gte mso 9]> </div> </div> </v:textbox> </v:fill> </v:rect> </v:image> <![endif]-->
                             </td>
@@ -491,10 +496,14 @@
                   <tr>
                     <td width="100.00%" style="padding-top: 16px; padding-bottom: 9.5px; width: 100%">
                       <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 450.00pt; height: 376.50pt" src="assets/table_1703167_bef2e1.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 450.00pt; height:376.50pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
-                      <table background="assets/table_1703167_bef2e1.png"
+                      <!-- <table background="assets/table_1703167_bef2e1.png"
                         alt="a message from jessica giebel senior manager of professional education" cellpadding="0"
                         cellspacing="0" border="0" role="presentation" align="center" width="100.00%" height="502.00"
-                        style="background: url('assets/table_1703167_c2d318.png') 50% / 100% no-repeat; width: 100%; height: 502px; border-spacing: 0; margin-top: -0.5px">
+                        style="background: url('assets/table_1703167_c2d318.png') 50% / 100% no-repeat; width: 100%; height: 502px; border-spacing: 0; margin-top: -0.5px"> -->
+                      <table background="assets/table_1703167_bef2e1.png"
+                        alt="a message from jessica giebel senior manager of professional education" cellpadding="0"
+                        cellspacing="0" border="0" role="presentation" align="center" width="100%" height="502"
+                        style="border-spacing: 0; margin-top: -0.5px">
                         <tr>
                           <td valign="top" height="442.45" style="padding-top: 59.55px; height: 442.45px">
                             <table cellpadding="0" cellspacing="0" border="0" role="presentation"
