--- a/5_Group_9451_Code/index.html
+++ b/5_Group_9451_Code/index.html
@@ -261,10 +261,13 @@
                                 <td style="padding-right: 35px">
                                   <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 423.75pt; height: 147.00pt" src="assets/table__hqi0l1_62bd97.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 423.75pt; height:147.00pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
                                   <a href="https://www.oracademy.com" target="_blank" rel="noopener noreferrer">
-                                    <table background="assets/table__hqi0l1_62bd97.png" alt="Image" cellpadding="0"
+                                    <!-- <table background="assets/table__hqi0l1_62bd97.png" alt="Image" cellpadding="0"
                                       cellspacing="0" border="0" role="presentation" align="center" width="100.00%"
                                       height="196.00"
-                                      style="background: url('assets/table__hqi0l1_13cbc7.png') 50% / 100% no-repeat; width: 100%; height: 196px; border-spacing: 0">
+                                      style="background: url('assets/table__hqi0l1_13cbc7.png') 50% / 100% no-repeat; width: 100%; height: 196px; border-spacing: 0"> -->
+                                    <table background="assets/table__hqi0l1_62bd97.png" alt="Image" cellpadding="0"
+                                      cellspacing="0" border="0" role="presentation" align="center" width="100%"
+                                      height="196" style="border-spacing: 0">
                                       <tr>
                                         <td align="left" valign="top" height="85.43"
                                           style="padding-top: 110.57px; padding-left: 391.79px; height: 85.43px; mso-padding-left-alt: 0; margin-left: 391.79px">
@@ -368,11 +371,15 @@
                         <tr>
                           <td width="100.00%" style="padding-top: 13.75px; padding-bottom: 25.5px; width: 100%">
                             <!--[if gte mso 9]> <v:image xmlns:v="urn:schemas-microsoft-com:vml" alt="background-image" fill="true" stroke="false" style="border: 0; display: inline-block; width: 450.00pt; height: 677.25pt" src="assets/table__8kevsu_e1d061.png"/> <v:rect alt="background-image-rectangle" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 450.00pt; height:677.25pt"> <v:fill opacity="0%" color="#FFFFFF/> <v:textbox inset="0,0,0,0"> <div> <div style="font-size: 0;"> <![endif]-->
-                            <table background="assets/table__8kevsu_e1d061.png"
+                            <!-- <table background="assets/table__8kevsu_e1d061.png"
                               alt="a blue and white background with three red dots on it" cellpadding="0"
                               cellspacing="0" border="0" role="presentation" align="center" width="100.00%"
                               height="903.00"
-                              style="background: url('assets/table__8kevsu_ecef7e.png') 50% / 100% no-repeat; width: 100%; height: 903px; border-spacing: 0; margin-top: -0.5px">
+                              style="background: url('assets/table__8kevsu_ecef7e.png') 50% / 100% no-repeat; width: 100%; height: 903px; border-spacing: 0; margin-top: -0.5px"> -->
+                            <table background="assets/table__8kevsu_e1d061.png"
+                              alt="a blue and white background with three red dots on it" cellpadding="0"
+                              cellspacing="0" border="0" role="presentation" align="center" width="100%" height="903"
+                              style="border-spacing: 0; margin-top: -0.5px">
                               <tr>
                                 <td valign="top" class="force-w100" width="100.00%" height="878.50"
                                   style="padding-top: 24.5px; width: 100%; height: 878.5px">
