fix: assets and index email 2

--- a/2_Group_9440_Code/index.html
+++ b/2_Group_9440_Code/index.html
@@ -231,8 +231,7 @@
   </div>
   <center lang="en" dir="ltr"
     style="width: 100%; table-layout: fixed; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;">
-    <table cellpadding="0" cellspacing="0" border="0" role="presentation"
-      style="margin: 0; border-spacing: 0; border: 2px solid green;">
+    <table cellpadding="0" cellspacing="0" border="0" role="presentation" style="margin: 0; border-spacing: 0;">
       <tr>
         <td width="100.00%" style="width: 100%">
           <table class="bg-fffffe" cellpadding="0" cellspacing="0" border="0" role="presentation" bgcolor="white"
